# Triangles

./: .gitignore  CMakeLists.txt
source/: main.cpp  make.txt  test.cpp
source/Compare/: Compare.cpp  compare.cpp  compare.h  compare2D.cpp  compare2D.h
source/Degenerative/: Degenerative.cpp  Degenerative.h
source/Geometry/: Geometry2D.cpp  Geometry2D.h  Geometry3D.cpp  Geometry3D.h
source/Sort/: sort.cpp  sort.h
source/Tests/: answer_10.txt  answer_5.txt  answer_6.txt  answer_8.txt  input_1.txt  input_10.txt  input_11.txt  input_12.txt  input_13.txt  input_14.txt  input_15.txt  input_16.txt  input_17.txt  input_18.txt  input_19.txt  input_2.txt  input_20.txt  input_21.txt  input_22.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt
source/Tools/: Tools.cpp  Tools.h
source/Triangle/: double_tools.h  triangle.cpp  triangle.h
